--- a/order-service.properties
+++ b/order-service.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:8889/order-service?createDatabaseIfNotExist=true&characterEncoding=utf-8&autoReconnect=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Mysql8Dialect
+spring.datasource.url=jdbc:mysql://localhost:8889/order-service
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
